--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css" crossorigin="anonymous">
+	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css" rel="preload" as="style">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="preload" as="style">
 	<link rel="stylesheet" href="./assets/style.css">
 	<meta charset="UTF-8">
 </head>
@@ -151,7 +151,7 @@
 	</div>
 
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-	<script src="./assets/bootstrap/bootstrap.bundle.js" crossorigin="anonymous"></script>
+	<script src="./assets/bootstrap/bootstrap.bundle.js"></script>
 	<script src="./assets/scripts.js"></script>
 	<script src="./assets/maugallery.js"></script>
 </body>
