--- a/index.html
+++ b/index.html
@@ -89,15 +89,18 @@
 		</div>
 
 		<article id="about" role="article" aria-label="Informations sur Nina Carducci" 
-							itemscope itemtype="https://schema.org/Photograph">
+							itemscope itemtype="https://schema.org/Person">
 			<figure class="picture left">
 				<img src="./assets/images/nina.webp" alt="Photo de Nina Carducci" itemprop="image">
 			</figure>
 			<div id="about-me">
 				<h2 class="about-me__title" role="heading" aria-level="2" itemprop="subjectOf">A propos de moi</h2>
 				<h3 class="about-me__introduction" role="heading" aria-level="3" itemprop="disambiguatingDescription">Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.</h3>
-				<p itemprop="description" itemprop="description">Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie : le figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos yeux, ou le partager au plus grand nombre.
+				<p itemprop="description">Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie : le figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos yeux, ou le partager au plus grand nombre.
 					C’est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon approche, ma technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur, de la tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
+				<p itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
+					Email : <a href="mailto:contact@ninacarducci.fr" itemprop="email">contact@ninacarducci.fr</a>
+				</p>
 			</div>
 		</article>
 
