--- a/index.html
+++ b/index.html
@@ -32,33 +32,34 @@
 				href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap">
 	<link rel="stylesheet" href="./assets/style.min.css">
 	<script type="application/ld+json">
-		[]
 		{
-			"@context": "https://schema.org/",
-			"@type": "Person",
+			"@context": "http://schema.org",
+			"@type": "LocalBusiness",
+			"name": "Nina Carducci",
+			"mainEntityOfPage": "Photograph",
 			"image": "https://phbord.github.io/ninacarducci.github.io/assets/images/nina.webp",
 			"subjectOf": "A propos de moi",
 			"disambiguatingDescription": "Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.",
 			"description": "Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie : le figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos yeux, ou le partager au plus grand nombre. C’est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon approche, ma technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur, de la tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos.",
-			"address": {
-				"@type": "PostalAddress",
-				"email": "mailto:contact@ninacarducci.fr",
-			},
+			"address": "10 rue Molière, 92400 Courbevoie",
+			"url": "https://phbord.github.io/ninacarducci.github.io/",
+			"telephone": "0677865423",
+			"priceRange": "€€"
 		}
 	</script>
 </head>
 <body>
 	<header class="top-header" role="banner">
-		<h1 class="name" itemprop="headline">
+		<h1 class="name">
 			<a href="/" aria-label="Accueil">Nina Carducci</a>
 		</h1>
 		<nav class="nav" role="navigation">   
 			<ul>
-				<li itemprop="name"><a href="#about">À propos</a></li>
-				<li itemprop="name"><a href="#gallery">Galerie</a></li>
-				<li itemprop="name"><a href="#services">Service</a></li>
-				<li itemprop="name"><a href="#contact">Contact</a></li>
-				<li itemprop="name">
+				<li><a href="#about">À propos</a></li>
+				<li><a href="#gallery">Galerie</a></li>
+				<li><a href="#services">Service</a></li>
+				<li><a href="#contact">Contact</a></li>
+				<li >
 					<a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank" aria-label="Instagram">
 						<img src="assets/images/instagram.png" alt="Instagram">
 					</a>
@@ -103,19 +104,15 @@
 			</div>
 		</div>
 
-		<article id="about" role="article" aria-label="Informations sur Nina Carducci" 
-							itemscope itemtype="https://schema.org/Person">
+		<article id="about" role="article" aria-label="Informations sur Nina Carducci">
 			<figure class="picture left">
-				<img src="./assets/images/nina.webp" alt="Photo de Nina Carducci" itemprop="image">
+				<img src="./assets/images/nina.webp" alt="Photo de Nina Carducci">
 			</figure>
 			<div id="about-me">
-				<h2 class="about-me__title" role="heading" aria-level="2" itemprop="subjectOf">A propos de moi</h2>
-				<h3 class="about-me__introduction" role="heading" aria-level="3" itemprop="disambiguatingDescription">Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.</h3>
-				<p itemprop="description">Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie : le figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos yeux, ou le partager au plus grand nombre.
+				<h2 class="about-me__title" role="heading" aria-level="2">A propos de moi</h2>
+				<h3 class="about-me__introduction" role="heading" aria-level="3">Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.</h3>
+				<p>Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie : le figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos yeux, ou le partager au plus grand nombre.
 					C’est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon approche, ma technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur, de la tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
-				<p itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
-					Email : <a href="mailto:contact@ninacarducci.fr" itemprop="email">contact@ninacarducci.fr</a>
-				</p>
 			</div>
 		</article>
 
@@ -183,10 +180,9 @@
 		<section class="quote">
 			<figure>
 				<blockquote>
-					<h2 class="quote__text" 
-							itemprop="text">De manière inconsciente, je crois, je guette un regard, une expression, des traits ou une nostalgie capable de résumer ou plus exactement de révéler une vie</h2>
+					<h2 class="quote__text" >De manière inconsciente, je crois, je guette un regard, une expression, des traits ou une nostalgie capable de résumer ou plus exactement de révéler une vie</h2>
 				</blockquote>
-				<figcaption class="quote__author" itemprop="author">- Richard Avedon</figcaption>
+				<figcaption class="quote__author">- Richard Avedon</figcaption>
 			</figure>
 		</section>
 
